--- a/woost/views/resources/styles/translationworkflow.css
+++ b/woost/views/resources/styles/translationworkflow.css
@@ -17,3 +17,28 @@
     margin-right: 0.3em;
 }
 
+.BackOfficeLayout .TranslationWorkflowRequestStateSign {
+    margin-right: 0.8em;
+}
+
+.BackOfficeLayout .TranslationWorkflowRequestStateSign > .label > .text_wrapper {
+    display: inline-block;
+    vertical-align: middle;
+    border: none !important;
+    font-size: 0.7em;
+    border-radius: 8px;
+    line-height: 0;
+    width: 8px;
+    height: 8px;
+    padding: 0;
+}
+
+.BackOfficeLayout .ContentTable .TranslationWorkflowRequestStateSign > .label > .text_wrapper {
+    opacity: 0.7;
+}
+
+.BackOfficeLayout .ContentTable .TranslationWorkflowRequestStateSign[data-woost-context-menu='expanded'] > .label > .text_wrapper,
+.BackOfficeLayout .ContentTable .TranslationWorkflowRequestStateSign:hover > .label > .text_wrapper {
+    opacity: 1;
+}
+
