translationworkflow: margin tweak for the state label in request cards

--- a/woost/views/resources/styles/TranslationWorkflowRequestCard.css
+++ b/woost/views/resources/styles/TranslationWorkflowRequestCard.css
@@ -1,14 +1,12 @@
 
 .BackOfficeLayout .TranslationWorkflowRequestCard .translation_workflow_request_state_label {
     margin-right: 0 !important;
+    font-weight: bold;
+    margin-left: 0.3em;
 }
 
 .BackOfficeLayout .TranslationWorkflowRequestCard .translation_workflow_request_state_label,
 .BackOfficeLayout .TranslationWorkflowRequestCard .translation_workflow_request_assigned_translator_label {
     color: #666;
-}
-
-.BackOfficeLayout .TranslationWorkflowRequestCard .translation_workflow_request_state_label {
-    font-weight: bold;
 }
 
