translationworkflow: added state color codes in the tabs for translation request listings

--- a/woost/views/resources/styles/translationworkflow.css
+++ b/woost/views/resources/styles/translationworkflow.css
@@ -1,4 +1,8 @@
 
+.BackOfficeLayout .ContentView .tab_state_sign {
+    margin-right: 0.6em;
+}
+
 .BackOfficeEditView .translation_workflow_controls {
     padding-top: 0.6em;
     float: right;
