--- a/woost/views/resources/styles/TranslationWorkflowRequestForm.css
+++ b/woost/views/resources/styles/TranslationWorkflowRequestForm.css
@@ -20,7 +20,7 @@
 .TranslationWorkflowRequestForm .translation_source_display,
 .TranslationWorkflowRequestForm .translation_source_display + textarea,
 .TranslationWorkflowRequestForm .translation_source_display + input {
-    width: 45% !important;
+    width: 30em !important;
 }
 
 .TranslationWorkflowRequestForm .field_instance-TextArea .translation_source_display {
@@ -31,24 +31,6 @@
     height: 8.2em;
 }
 
-.TranslationWorkflowRequestForm fieldset.translation_request > .fieldset_fields > fieldset {
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 0;
-}
-
-.TranslationWorkflowRequestForm fieldset.translation_request > .fieldset_fields > fieldset.translation_request-info {
-    width: 20%;
-}
-
-.TranslationWorkflowRequestForm fieldset.translation_request > .fieldset_fields > fieldset.translation_request-changelog {
-    width: 30%;
-}
-
-.TranslationWorkflowRequestForm fieldset.translation_request > .fieldset_fields > fieldset.translation_request-translated_values {
-    width: 40%;
-}
-
 .TranslationWorkflowRequestForm fieldset.translation_request > .fieldset_fields > fieldset.translation_request-translated_values .field_instance {
     float: none;
 }
@@ -57,7 +39,7 @@
     width: 15%;
 }
 
-.TranslationWorkflowRequestForm fieldset.translation_request > .fieldset_fields > fieldset + fieldset {
-    margin-left: 2%;
+.TranslationWorkflowRequestForm fieldset.translation_request-changelog .field_instance {
+    float: none !important;
 }
 
