--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -1389,8 +1389,7 @@ body.scripted .BackOfficeLayout .Table .row_selection_control {
     font-weight: bold;
 }
 
-.BackOfficeItemView .page_title .item_icon,
-.BackOfficeItemView .page_title .item_image_gallery {
+.BackOfficeItemView .page_title .item_display {
     margin-right: 0.8em;
     display: inline-block;
     vertical-align: top;
@@ -3667,7 +3666,7 @@ div.success_label {
     white-space: nowrap;
 }
 
-.BackOfficeLayout .ItemCard .item_image_gallery {
+.BackOfficeLayout .ItemCard .item_display {
     display: inline-block;
     vertical-align: top;
     margin-right: 1em;
