Added support for SASS in the CSS declarations of the Block and Style models.
- Added libsass as a dependency
- Renamed Block.inline_css_styles to Block.embedded_styles
  (requires a migration)
- Added the Block.embedded_styles_initialization member
- Added the Style.declarations_initialization member
- Added the Configuration.common_styles_initialization member
- Added the Website.common_styles_initialization member
- Use schema.CodeBlock for all style fields

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -3059,6 +3059,16 @@ a.pickcolor span {
     width: 4em;
 }
 
+/* Block edit form
+-----------------------------------------------------------------------------*/
+.BlockFieldsView .embedded_styles_initialization_field .CodeMirror {
+    height: 4em !important;
+}
+
+.BlockFieldsView .embedded_styles_field .CodeMirror {
+    height: 14em !important;
+}
+
 /* Member list
 -----------------------------------------------------------------------------*/
 .BackOfficeFieldsView .MemberList-autocomplete {
