--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -2732,12 +2732,16 @@ button.TypeSelectorButton span {
     float: none !important;
     clear: none !important;
     display: inline-block !important;
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 .BackOfficeLayout .FilterBox .filter_entry .field_instance .control,
 .BackOfficeLayout .FilterBox .filter_entry .field_instance .Autocomplete.control .text_box {
     font-size: 1em;
+}
+
+.BackOfficeLayout .FilterBox .filter_entry .field {
+    margin-right: 1em;
 }
 
 .BackOfficeLayout .FilterBox .filter_entry fieldset {
@@ -2747,7 +2751,7 @@ button.TypeSelectorButton span {
 
 .BackOfficeLayout .FilterBox .delete_filter_button {
     position: relative;
-    top: 0.2em;
+    top: 0.3em;
     font-size: 1.2em;
     text-decoration: none;
     color: #888;
