Make the small-screen-navigation SASS mixin hide the regular menu on the smallest screen size

--- a/woost/views/resources/styles/SmallScreenNavigation.scss
+++ b/woost/views/resources/styles/SmallScreenNavigation.scss
@@ -3,6 +3,12 @@
 
 @mixin small-screen-navigation {
 
+    .site_navigation > .menu {
+        @include grid(grid-min-size()) {
+            display: none;
+        }
+    }
+
     .SmallScreenNavigation {
 
         @include grid(gt grid-min-size()) {
