--- a/woost/views/resources/styles/jquery.Jcrop.css
+++ b/woost/views/resources/styles/jquery.Jcrop.css
@@ -8,7 +8,7 @@
 {
 	font-size: 0;
 	position: absolute;
-	background: white url('/resources/images/Jcrop.gif') top left repeat;
+	background: white url('../images/Jcrop.gif') top left repeat;
 }
 .jcrop-vline { height: 100%; width: 1px !important; }
 .jcrop-hline { width: 100%; height: 1px !important; }
@@ -54,6 +54,6 @@
 }
 
 .ui-dialog-overlay {
-    background:url("/resources/images/overlay_background.png") repeat scroll 50% 50% #666666;
+    background:url("../images/overlay_background.png") repeat scroll 50% 50% #666666;
     opacity:0.5;
 }
